--- a/Vanilla_weather_project/index.html
+++ b/Vanilla_weather_project/index.html
@@ -55,7 +55,7 @@
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://incredible-cuchufli-816eb4.netlify.app/" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
